--- a/nicepage.css
+++ b/nicepage.css
@@ -38284,24 +38284,33 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 80px;
 }
 
+.u-header .u-image-1 {
+  width: 64px;
+  height: 64px;
+  margin: 22px auto 0 0;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+
 .u-header .u-menu-1 {
-  margin: 22px 0 22px auto;
+  margin: -32px 0 22px auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
+  letter-spacing: 0px;
 }
 
 .u-header .u-nav-2 {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  letter-spacing: 0px;
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
     width: auto;
-  }
-
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
   }
 }
 
@@ -38312,12 +38321,12 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 120px;
+  min-height: 44px;
 }
 
 .u-footer .u-text-1 {
   width: 417px;
-  margin: 49px auto;
+  margin: 11px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
