--- a/About.css
+++ b/About.css
@@ -1,54 +1,269 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 703px;
+}
+
+.u-section-1 .u-text-1 {
+  font-weight: 700;
+  width: 580px;
+  margin: 60px auto 0;
+}
+
+.u-section-1 .u-group-elements-1 {
+  width: 964px;
+  min-height: 351px;
+  height: auto;
+  margin: 52px auto 60px;
+}
+
+.u-section-1 .u-text-2 {
+  font-size: 1.125rem;
+  margin: 0 384px 0 0;
+}
+
+.u-section-1 .u-text-3 {
+  font-size: 1.125rem;
+  margin: 20px 224px 0 0;
+}
+
+.u-section-1 .u-text-4 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+.u-section-1 .u-text-5 {
+  font-size: 1.125rem;
+  margin: 20px 60px 0 0;
+}
+
+.u-section-1 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-text-7 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+.u-section-1 .u-text-8 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-group-elements-1 {
+    width: 940px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-group-elements-1 {
+    width: 720px;
+    min-height: 435px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-1 .u-group-elements-1 {
+    width: 540px;
+    min-height: 519px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-1 .u-group-elements-1 {
+    width: 340px;
+  }
 }.u-section-2 .u-sheet-1 {
-  min-height: 1176px;
+  min-height: 598px;
 }
 
-.u-section-2 .u-layout-wrap-1 {
-  margin: 243px 0 60px;
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  line-height: 1.2;
+  width: 225px;
+  margin: 94px auto 0;
 }
 
-.u-section-2 .u-layout-cell-1 {
-  min-height: 230px;
+.u-section-2 .u-list-1 {
+  margin-top: 13px;
+  margin-bottom: 60px;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: 50% 50%;
+  min-height: 388px;
+  grid-gap: 0px 0px;
 }
 
 .u-section-2 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-2 .u-text-1 {
+.u-section-2 .u-icon-1 {
+  height: 80px;
+  width: 80px;
+  background-image: none;
+  color: rgb(255, 255, 255) !important;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-2 {
+  font-weight: 700;
+  margin: 20px auto 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1rem;
+  margin: 37px 0 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-icon-2 {
+  height: 80px;
+  width: 80px;
+  background-image: none;
+  color: rgb(219, 84, 90) !important;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-4 {
+  font-weight: 700;
+  margin: 20px auto 0;
+}
+
+.u-section-2 .u-text-5 {
+  font-size: 1rem;
+  margin: 37px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-repeater-1 {
+    min-height: 320px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 910px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 370px;
+    grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 893px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: 154px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 1123px;
+}
+
+.u-section-3 .u-layout-wrap-1 {
+  margin: 190px 0 60px;
+}
+
+.u-section-3 .u-layout-cell-1 {
+  min-height: 230px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-1 {
   font-weight: bold;
   margin: 0 0 0 auto;
 }
 
-.u-section-2 .u-text-2 {
+.u-section-3 .u-text-2 {
   margin: 20px 0 0 auto;
 }
 
-.u-section-2 .u-layout-cell-2 {
+.u-section-3 .u-layout-cell-2 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-2 {
+.u-section-3 .u-container-layout-2 {
   padding: 10px;
 }
 
-.u-section-2 .u-image-1 {
+.u-section-3 .u-image-1 {
   width: 200px;
   height: 200px;
   object-position: 100% 50%;
   margin: 0 auto;
 }
 
-.u-section-2 .u-layout-cell-3 {
+.u-section-3 .u-layout-cell-3 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-3 {
+.u-section-3 .u-container-layout-3 {
   padding: 30px;
 }
 
-.u-section-2 .u-social-icons-1 {
+.u-section-3 .u-social-icons-1 {
   height: 85px;
   min-height: 16px;
   width: 85px;
@@ -56,19 +271,19 @@
   margin: 0 auto 0 0;
 }
 
-.u-section-2 .u-icon-1 {
+.u-section-3 .u-icon-1 {
   height: 100%;
 }
 
-.u-section-2 .u-layout-cell-4 {
+.u-section-3 .u-layout-cell-4 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-4 {
+.u-section-3 .u-container-layout-4 {
   padding: 30px;
 }
 
-.u-section-2 .u-social-icons-2 {
+.u-section-3 .u-social-icons-2 {
   height: 85px;
   min-height: 16px;
   width: 85px;
@@ -76,88 +291,88 @@
   margin: 0 0 0 auto;
 }
 
-.u-section-2 .u-icon-2 {
+.u-section-3 .u-icon-2 {
   height: 100%;
 }
 
-.u-section-2 .u-layout-cell-5 {
+.u-section-3 .u-layout-cell-5 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-5 {
+.u-section-3 .u-container-layout-5 {
   padding: 10px;
 }
 
-.u-section-2 .u-image-2 {
+.u-section-3 .u-image-2 {
   width: 205px;
   height: 205px;
   object-position: 0% 50%;
   margin: 0 auto;
 }
 
-.u-section-2 .u-layout-cell-6 {
+.u-section-3 .u-layout-cell-6 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-6 {
+.u-section-3 .u-container-layout-6 {
   padding: 30px;
 }
 
-.u-section-2 .u-text-3 {
+.u-section-3 .u-text-3 {
   font-weight: 700;
   margin: 0 auto 0 0;
 }
 
-.u-section-2 .u-text-4 {
+.u-section-3 .u-text-4 {
   margin: 20px auto 0 0;
 }
 
-.u-section-2 .u-btn-1 {
+.u-section-3 .u-btn-1 {
   background-image: none;
   padding: 0;
 }
 
-.u-section-2 .u-layout-cell-7 {
+.u-section-3 .u-layout-cell-7 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-7 {
+.u-section-3 .u-container-layout-7 {
   padding: 30px;
 }
 
-.u-section-2 .u-text-5 {
+.u-section-3 .u-text-5 {
   font-weight: 700;
   margin: 13px 0 0 auto;
 }
 
-.u-section-2 .u-text-6 {
+.u-section-3 .u-text-6 {
   margin: 21px 0 0 auto;
 }
 
-.u-section-2 .u-layout-cell-8 {
+.u-section-3 .u-layout-cell-8 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-8 {
+.u-section-3 .u-container-layout-8 {
   padding: 10px;
 }
 
-.u-section-2 .u-image-3 {
+.u-section-3 .u-image-3 {
   width: 203px;
   height: 203px;
   object-position: 8.62% 50%;
   margin: 3px auto 0;
 }
 
-.u-section-2 .u-layout-cell-9 {
+.u-section-3 .u-layout-cell-9 {
   min-height: 230px;
 }
 
-.u-section-2 .u-container-layout-9 {
+.u-section-3 .u-container-layout-9 {
   padding: 30px;
 }
 
-.u-section-2 .u-social-icons-3 {
+.u-section-3 .u-social-icons-3 {
   height: 85px;
   min-height: 16px;
   width: 85px;
@@ -165,290 +380,290 @@
   margin: 0 auto 0 0;
 }
 
-.u-section-2 .u-icon-3 {
+.u-section-3 .u-icon-3 {
   height: 100%;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
+  .u-section-3 .u-sheet-1 {
     min-height: 759px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
+  .u-section-3 .u-layout-wrap-1 {
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-2 .u-layout-cell-1 {
+  .u-section-3 .u-layout-cell-1 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-3 .u-layout-cell-2 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-image-1 {
+  .u-section-3 .u-image-1 {
     width: 205px;
     height: 205px;
   }
 
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-3 .u-layout-cell-3 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-layout-cell-4 {
+  .u-section-3 .u-layout-cell-4 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-layout-cell-5 {
+  .u-section-3 .u-layout-cell-5 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-image-2 {
+  .u-section-3 .u-image-2 {
     width: 210px;
     height: 210px;
   }
 
-  .u-section-2 .u-layout-cell-6 {
+  .u-section-3 .u-layout-cell-6 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-layout-cell-7 {
+  .u-section-3 .u-layout-cell-7 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-layout-cell-8 {
+  .u-section-3 .u-layout-cell-8 {
     min-height: 190px;
   }
 
-  .u-section-2 .u-image-3 {
+  .u-section-3 .u-image-3 {
     width: 210px;
     height: 210px;
   }
 
-  .u-section-2 .u-layout-cell-9 {
+  .u-section-3 .u-layout-cell-9 {
     min-height: 190px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 924px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 871px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
+  .u-section-3 .u-layout-cell-1 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-3 .u-layout-cell-2 {
     min-height: 306px;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-2 {
     padding-left: 9px;
     padding-right: 9px;
   }
 
-  .u-section-2 .u-image-1 {
+  .u-section-3 .u-image-1 {
     width: 149px;
     height: 149px;
   }
 
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-3 .u-layout-cell-3 {
     min-height: 146px;
   }
 
-  .u-section-2 .u-layout-cell-4 {
+  .u-section-3 .u-layout-cell-4 {
     min-height: 146px;
   }
 
-  .u-section-2 .u-layout-cell-5 {
+  .u-section-3 .u-layout-cell-5 {
     min-height: 306px;
   }
 
-  .u-section-2 .u-image-2 {
+  .u-section-3 .u-image-2 {
     width: 143px;
     height: 143px;
     margin-left: 0;
   }
 
-  .u-section-2 .u-layout-cell-6 {
+  .u-section-3 .u-layout-cell-6 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-7 {
+  .u-section-3 .u-layout-cell-7 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-8 {
+  .u-section-3 .u-layout-cell-8 {
     min-height: 306px;
   }
 
-  .u-section-2 .u-image-3 {
+  .u-section-3 .u-image-3 {
     width: 143px;
     height: 143px;
   }
 
-  .u-section-2 .u-layout-cell-9 {
+  .u-section-3 .u-layout-cell-9 {
     min-height: 146px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
+  .u-section-3 .u-sheet-1 {
     min-height: 1613px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
+  .u-section-3 .u-layout-wrap-1 {
     margin-top: -11px;
     margin-bottom: -11px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-2 .u-layout-cell-1 {
+  .u-section-3 .u-layout-cell-1 {
     min-height: 178px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-3 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-3 .u-layout-cell-2 {
     min-height: 169px;
   }
 
-  .u-section-2 .u-image-1 {
+  .u-section-3 .u-image-1 {
     margin-left: 0;
   }
 
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-3 .u-layout-cell-3 {
     min-height: 145px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-3 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-social-icons-1 {
+  .u-section-3 .u-social-icons-1 {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .u-section-2 .u-layout-cell-4 {
+  .u-section-3 .u-layout-cell-4 {
     min-height: 145px;
     order: 2;
   }
 
-  .u-section-2 .u-container-layout-4 {
+  .u-section-3 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-social-icons-2 {
+  .u-section-3 .u-social-icons-2 {
     margin-right: auto;
     margin-left: 0;
   }
 
-  .u-section-2 .u-layout-cell-5 {
+  .u-section-3 .u-layout-cell-5 {
     min-height: 163px;
     order: 1;
   }
 
-  .u-section-2 .u-image-2 {
+  .u-section-3 .u-image-2 {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .u-section-2 .u-layout-cell-6 {
+  .u-section-3 .u-layout-cell-6 {
     min-height: 178px;
     order: 0;
   }
 
-  .u-section-2 .u-container-layout-6 {
+  .u-section-3 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-layout-cell-7 {
+  .u-section-3 .u-layout-cell-7 {
     min-height: 192px;
   }
 
-  .u-section-2 .u-container-layout-7 {
+  .u-section-3 .u-container-layout-7 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-layout-cell-8 {
+  .u-section-3 .u-layout-cell-8 {
     min-height: 178px;
   }
 
-  .u-section-2 .u-image-3 {
+  .u-section-3 .u-image-3 {
     margin-left: 0;
   }
 
-  .u-section-2 .u-layout-cell-9 {
+  .u-section-3 .u-layout-cell-9 {
     min-height: 71px;
   }
 
-  .u-section-2 .u-container-layout-9 {
+  .u-section-3 .u-container-layout-9 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-social-icons-3 {
+  .u-section-3 .u-social-icons-3 {
     margin-right: 0;
     margin-left: auto;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
+  .u-section-3 .u-sheet-1 {
     min-height: 1446px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 243px;
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 190px;
     margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-2 .u-layout-cell-1 {
+  .u-section-3 .u-layout-cell-1 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-3 .u-layout-cell-2 {
     min-height: 106px;
   }
 
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-3 .u-layout-cell-3 {
     min-height: 91px;
   }
 
-  .u-section-2 .u-layout-cell-4 {
+  .u-section-3 .u-layout-cell-4 {
     min-height: 91px;
   }
 
-  .u-section-2 .u-layout-cell-5 {
+  .u-section-3 .u-layout-cell-5 {
     min-height: 103px;
   }
 
-  .u-section-2 .u-layout-cell-6 {
+  .u-section-3 .u-layout-cell-6 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-7 {
+  .u-section-3 .u-layout-cell-7 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-8 {
+  .u-section-3 .u-layout-cell-8 {
     min-height: 112px;
   }
 
-  .u-section-2 .u-layout-cell-9 {
+  .u-section-3 .u-layout-cell-9 {
     min-height: 45px;
   }
 }
