--- a/Members.css
+++ b/Members.css
@@ -225,6 +225,47 @@
   padding: 0;
 }
 
+.u-section-1 .u-list-item-6 {
+  background-size: auto;
+}
+
+.u-section-1 .u-container-layout-6 {
+  padding: 30px;
+}
+
+.u-section-1 .u-image-6 {
+  width: 150px;
+  height: 150px;
+  background-image: url("images/M_GHK.jpg");
+  background-position: 50% 50%;
+  margin: 0 auto;
+}
+
+.u-section-1 .u-text-17 {
+  font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-text-18 {
+  background-image: none;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-text-19 {
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-6 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-6 {
+  background-image: none;
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-list-1 {
     width: 940px;
@@ -275,6 +316,11 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+
+  .u-section-1 .u-container-layout-6 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -316,6 +362,11 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-1 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 } .u-section-2 {
   min-height: 663px;
 }
@@ -328,14 +379,15 @@
 
 .u-section-2 .u-list-1 {
   grid-template-rows: auto auto;
-  width: 1110px;
+  width: 794px;
   margin: 60px auto;
 }
 
 .u-section-2 .u-repeater-1 {
-  grid-template-columns: 33.3333% 33.3333% 33.3333%;
+  grid-template-columns: 50% 50%;
   grid-gap: 0px 0px;
-  min-height: 763px;
+  min-height: 369px;
+  grid-auto-columns: 50%;
 }
 
 .u-section-2 .u-list-item-1 {
@@ -356,8 +408,8 @@
 
 .u-section-2 .u-text-2 {
   font-size: 1.5rem;
-  text-decoration: underline !important;
   font-weight: normal;
+  text-decoration: underline !important;
   margin: 20px 0 0;
 }
 
@@ -391,15 +443,15 @@
 .u-section-2 .u-image-2 {
   width: 150px;
   height: 150px;
-  background-image: url("images/M_GHK.jpg");
+  background-image: url("images/M_SSY.png");
   background-position: 50% 50%;
   margin: 20px auto 0;
 }
 
 .u-section-2 .u-text-5 {
   font-size: 1.5rem;
-  text-decoration: underline !important;
   font-weight: normal;
+  text-decoration: underline !important;
   margin: 20px 0 0;
 }
 
@@ -422,97 +474,9 @@
   padding: 0;
 }
 
-.u-section-2 .u-list-item-3 {
-  background-image: none;
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-2 .u-image-3 {
-  width: 150px;
-  height: 150px;
-  background-image: url("images/M_SSY.png");
-  background-position: 50% 50%;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-text-8 {
-  font-size: 1.5rem;
-  text-decoration: underline !important;
-  font-weight: normal;
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-text-9 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-}
-
-.u-section-2 .u-text-10 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-icon-3 {
-  margin-right: 5px;
-}
-
-.u-section-2 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-list-item-4 {
-  background-image: none;
-}
-
-.u-section-2 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-2 .u-image-4 {
-  width: 150px;
-  height: 150px;
-  background-image: url("images/M_SSY.png");
-  background-position: 50% 50%;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-text-11 {
-  font-size: 1.5rem;
-  text-decoration: underline !important;
-  font-weight: normal;
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-text-12 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-}
-
-.u-section-2 .u-text-13 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-icon-4 {
-  margin-right: 5px;
-}
-
-.u-section-2 .u-btn-4 {
-  background-image: none;
-  padding: 0;
-}
-
 @media (max-width: 1199px) {
-  .u-section-2 .u-list-1 {
-    width: 940px;
-  }
-
   .u-section-2 .u-repeater-1 {
-    min-height: 646px;
+    grid-template-columns: 33.3333% 33.3333% 33.3333%;
   }
 }
 
@@ -523,7 +487,7 @@
 
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 50% 50%;
-    min-height: 742px;
+    grid-auto-columns: 100%;
   }
 }
 
@@ -538,16 +502,6 @@
   }
 
   .u-section-2 .u-container-layout-2 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -581,18 +535,8 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
 }.u-section-3 .u-sheet-1 {
-  min-height: 559px;
+  min-height: 588px;
 }
 
 .u-section-3 .u-text-1 {
@@ -603,7 +547,7 @@
 
 .u-section-3 .u-list-1 {
   grid-template-rows: auto auto;
-  width: 80%;
+  width: 796px;
   margin: 60px auto;
 }
 
